<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Sign_up">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/hello"
        tools:ignore="MissingClass,MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lets"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_email"
        app:counterMaxLength="50"
        app:hintTextColor="@color/white">


        <EditText
            android:id="@+id/Sign_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/textfield"
            android:ems="15"
            android:hint="@string/email_adress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Sign_erroremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:startIconDrawable="@drawable/ic_lock"
        app:hintTextColor="@color/white">


        <EditText
            android:id="@+id/Sign_Password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:autofillHints=""
            android:background="@drawable/textfield"
            android:ems="15"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Sign_errorpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry" />


    <Button
        android:id="@+id/Sign"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/button"
        android:text="@string/sign"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="Or sign up social media"
        android:textColor="@color/purple_200"
        android:textSize="15sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/google"
            tools:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/facebook"
            tools:srcCompat="@drawable/facebook" />

    </LinearLayout>

    <TextView
        android:id="@+id/have_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/have_login"
        android:textColor="@color/purple_200"
        android:textSize="15sp"
        android:textStyle="bold|italic" />

</LinearLayout>